<?xml version="1.0"?>
<package>
  <name>navigator</name>
  <version>0.0.0</version>
  <description>The navigator package</description>

  <maintainer email="khudur@kth.se">alan</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  
  <build_depend>ras_arduino_msgs</build_depend>
  <run_depend>ras_arduino_msgs</run_depend>
  <build_depend>rosutil</build_depend>
  <run_depend>rosutil</run_depend>
  <build_depend>hardware_msgs</build_depend>
  <run_depend>hardware_msgs</run_depend>

  <export>

  </export>
</package>
